# quantbit_siddharth_customizations

./: README.md  pyproject.toml
.github/workflows/: ci.yml
quantbit_siddharth_customizations/: hooks.py  modules.txt
quantbit_siddharth_customizations/quantbit_siddharth_customizations/custom/: delivery_note.json  delivery_note_item.json  packed_item.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_order_item.json  purchase_receipt.json  purchase_receipt_item.json  purchase_taxes_and_charges.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  sales_taxes_and_charges.json  supplier.json
quantbit_siddharth_customizations/quantbit_siddharth_customizations/doctype/filter_setting_doctype/: filter_setting_doctype.js  filter_setting_doctype.json  filter_setting_doctype.py  test_filter_setting_doctype.py
